rename users route to profile
