# src/api/profile/profile.routes.js
@@ -6,25 +6,25 @@ const {getUserInventory} = require("../../utils/bot");
 
 const router = express.Router();
 
-router.get('/:steamId', isOwner, async (req, res) => {
-  const user = await User.findOne({ steamId: req.params.steamId });
+router.get('', isOwner, async (req, res) => {
+  const user = await User.findOne({ steamId: req.user.steamId });
   res.json({
     tradeUrl: user.tradeUrl,
     wallet: user.wallet,
   });
 });
 
-router.put('/:steamId', isOwner, async (req, res) => {
+router.put('', isOwner, async (req, res) => {
   const user = await User.findOneAndUpdate(
-    { steamId: req.params.steamId },
+    { steamId: req.user.steamId },
     { tradeUrl: req.body.trade_url },
     { new: true },
   );
   res.json({ user });
 });
 
-router.get('/:steamId/inventory', isOwner, async (req, res) => {
-  const inventory = await getUserInventory(req.params.steamId, 570, 2, true);
+router.get('/inventory', isOwner, async (req, res) => {
+  const inventory = await getUserInventory(req.user.steamId, 570, 2, true);
   res.json({inventory});
 });
 
